--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <header>
-        <div class="container">
             <nav>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Store</a></li>
-                    <li><a href="#">Gmail</a></li>
-                    <li><a href="#">Images</a></li>
-                    <li><a href="#">###</a></li>
-                    <li><a href="#">Sign in</a></li>
+                <ul class="nav__links">
+                    <div class="links-container">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Store</a></li>
+                    </div>
+                    <div class="links-container">
+                        <li><a href="#">Gmail</a></li>
+                        <li><a href="#">Images</a></li>
+                        <li><a href="#">###</a></li>
+                        <li><a href="#">Sign in</a></li>
+                    </div>
                 </ul>
             </nav>
-        </div>
     </header>
 
     <main>
