--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-            <nav>
-                <ul class="nav__links">
-                    <div class="links-container">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Store</a></li>
-                    </div>
-                    <div class="links-container">
-                        <li><a href="#">Gmail</a></li>
-                        <li><a href="#">Images</a></li>
-                        <li><a href="#">###</a></li>
-                        <li><a href="#">Sign in</a></li>
-                    </div>
-                </ul>
-            </nav>
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
+    <div class="header-container">
+        <header>
+                <nav>
+                    <ul class="nav__links">
+                        <div class="links-container left">
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Store</a></li>
+                        </div>
+                        <div class="links-container right">
+                            <li><a href="#">Gmail</a></li>
+                            <li><a href="#">Images</a></li>
+                            <li><a href="#"><img src="/images/app-icon.png" alt=""></a></li>
+                            <li><a href="#">Sign in</a></li>
+                        </div>
+                    </ul>
+                </nav>
+        </header>
+        <main>
+        </main>
+        <footer>
+        </footer>
+        </body>
+    </div>
 </html>
