--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </nav>
         </header>
         <main>
+            <div class="image-container">
+                <img src="/images/logo.png" class="logo" alt="">
+            </div>
         </main>
         <footer>
         </footer>
