--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <li><a href="#">Gmail</a></li>
                             <li><a href="#">Images</a></li>
                             <li><a href="#"><img src="/images/app-icon.png" alt=""></a></li>
-                            <li><a href="#">Sign in</a></li>
+                            <li><a href="#"><span class="btn">Sign in</span></a></li>
                         </div>
                     </ul>
                 </nav>
@@ -29,6 +29,30 @@
             <div class="image-container">
                 <img src="/images/logo.png" class="logo" alt="">
             </div>
+                <form action="">
+                    <div class="search-container">
+                    </label>
+                        <div>
+                            <img class="search-img" src="images/search.png" alt="">
+                        </div>
+                        <div class="input-container">
+                            <label for="search">
+                            <input type="text" name="search">
+                        </div>
+                        <div>
+                            <img src="images/microphone.png" class="microphone-img" alt="">
+                        </div>
+                    </div>
+                </form>
+
+                <div class="text-container">
+                    <div>
+                        <p>Google Search</p>
+                    </div>
+                    <div>
+                        <p>I'm Feeling Lucky</p>
+                    </div>
+                </div>
         </main>
         <footer>
         </footer>
