feat: add footer

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
                 <div class="text-container">
                     <div>
-                        <p>Google Search</p>
+                        <button class="btn2">Google Search</button>
                     </div>
                     <div>
-                        <p>I'm Feeling Lucky</p>
+                        <button class="btn2">I'm Feeling Lucky</button>
                     </div>
                 </div>
         </main>
