--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <li><a href="#">Gmail</a></li>
                             <li><a href="#">Images</a></li>
                             <li><a href="#"><img src="/images/app-icon.png" alt=""></a></li>
-                            <li><a href="#"><span class="btn">Sign in</span></a></li>
+                            <li><a class="btn" href="#"><span >Sign in</span></a></li>
                         </div>
                     </ul>
                 </nav>
@@ -33,7 +33,9 @@
                     <div class="search-container">
                     </label>
                         <div>
-                            <img class="search-img" src="images/search.png" alt="">
+                            <svg class="search-img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                            </svg>
                         </div>
                         <div class="input-container">
                             <label for="search">
@@ -55,6 +57,23 @@
                 </div>
         </main>
         <footer>
+            <div class="footer-container">
+                <nav>
+                    <ul class="nav__links">
+                        <div class="links-container footer">
+                            <li><a href="#">Advertising</a></li>
+                            <li><a href="#">Business</a></li>
+                            <li><a href="#">How Search works</a></li>
+                        </div>
+                        <div class="links-container footer">
+                            
+                            <li><a href="#">Privacy</a></li>
+                            <li><a href="#">Terms</a></li>
+                            <li><a href="#">Settings</a></li>
+                        </div>
+                    </ul>
+                </nav>
+            </div>
         </footer>
         </body>
     </div>
