--- a/index.html
+++ b/index.html
@@ -4,77 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">  
+
+    <title>Google</title>
 </head>
 <body>
-    <div class="header-container">
-        <header>
-                <nav>
-                    <ul class="nav__links">
-                        <div class="links-container left">
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Store</a></li>
-                        </div>
-                        <div class="links-container right">
-                            <li><a href="#">Gmail</a></li>
-                            <li><a href="#">Images</a></li>
-                            <li><a href="#"><img src="/images/app-icon.png" alt=""></a></li>
-                            <li><a class="btn" href="#"><span >Sign in</span></a></li>
-                        </div>
-                    </ul>
-                </nav>
-        </header>
-        <main>
-            <div class="image-container">
-                <img src="/images/logo.png" class="logo" alt="">
-            </div>
-                <form action="">
-                    <div class="search-container">
-                    </label>
-                        <div>
-                            <svg class="search-img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                            </svg>
-                        </div>
-                        <div class="input-container">
-                            <label for="search">
-                            <input type="text" name="search">
-                        </div>
-                        <div>
-                            <img src="images/microphone.png" class="microphone-img" alt="">
-                        </div>
-                    </div>
-                </form>
+    <header>
+        <nav class="navbar flex items-center">
+            <a class="navbar__link pv3 db ph3 link underline-hover" href="#">About</a>
+            <a class="navbar__link pv3 db ph3 link underline-hover" href="#">Store</a>
+            <a class="navbar__link pv3 db ph3 link underline-hover ml-auto" href="#">Gmail</a>
+            <a class="navbar__link pv3 db ph3 link underline-hover" href="#">Images</a>
+            <a class="navbar__link pv3 db ph3 icon" href="#"><svg focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a>
+            <a class="btn navbar__link pv2 ph3 db mr3" href="#">Sign in</a>
+        </nav>
+    </header>
 
-                <div class="text-container">
-                    <div>
-                        <button class="btn2">Google Search</button>
-                    </div>
-                    <div>
-                        <button class="btn2">I'm Feeling Lucky</button>
-                    </div>
-                </div>
-        </main>
-        <footer>
-            <div class="footer-container">
-                <nav>
-                    <ul class="nav__links">
-                        <div class="links-container footer">
-                            <li><a href="#">Advertising</a></li>
-                            <li><a href="#">Business</a></li>
-                            <li><a href="#">How Search works</a></li>
-                        </div>
-                        <div class="links-container footer">
-                            
-                            <li><a href="#">Privacy</a></li>
-                            <li><a href="#">Terms</a></li>
-                            <li><a href="#">Settings</a></li>
-                        </div>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
-        </body>
-    </div>
+    <main>
+        <div class="image-container">
+            <img src="/images/logo.png" class="logo" alt="">
+        </div>
+        <div class="search-container">
+                <div class="search-container__lupa">
+                    <svg class="search-img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"><path>
+                    </svg>
+        </div>
+        <div class="search-container__input>
+            <label for="search"> </label>
+            <input type="text" name="search">
+        </div>
+        <div class="search-container__microphone">
+            <img src="https://web.archive.org/web/20191130234759im_/https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" class="microphone-img" alt="">
+        </div>
+        <div class="text-container">
+            <button class="btn2">Google Search</button>
+            <button class="btn2">I'm Feeling Lucky</button>
+        </div>
+    </main>
+
+    <footer>
+        <nav class="footer-navbar flex">
+            <a class="link underline-hover db pa3" href="#">Advertising</a>
+            <a class="link underline-hover db pa3" href="#">Business</a>
+            <a class="link underline-hover db pa3" href="#">How Search works</a>
+            <a class="link underline-hover db pa3 ml-auto" href="#">Privacy</a>
+            <a class="link underline-hover db pa3" href="#">Terms</a>
+            <a class="link underline-hover db pa3" href="#">Settings</a>
+        </nav>
+    </footer>
+
+</body>
 </html>
