--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="navbar__link pv3 db ph3 link underline-hover ml-auto" href="#">Gmail</a>
             <a class="navbar__link pv3 db ph3 link underline-hover" href="#">Images</a>
             <a class="navbar__link pv3 db ph3 icon" href="#"><svg focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a>
-            <a class="btn navbar__link pv2 ph3 db mr3" href="#">Sign in</a>
+            <a class="btn-sign navbar__link db mr3" href="#">Sign in</a>
         </nav>
     </header>
 
@@ -26,22 +26,32 @@
         <div class="image-container">
             <img src="/images/logo.png" class="logo" alt="">
         </div>
-        <div class="search-container">
-                <div class="search-container__lupa">
-                    <svg class="search-img" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"><path>
-                    </svg>
+
+        <div class="search-container flex items-center justify-between shadow-hover">
+
+            <div class="search-container__lupa ph3">
+                <svg class="search-icon" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+                    <path>
+                </svg>
+            </div>
+
+            <div class="search-container__input">
+                <form action="" class="form">
+                    <label class="label" for="search"></label>
+                    <input class="input" type="text" name="search">   
+                </form>
+            </div>
+
+            <div class="search-container__microphone ph3">
+                <img src="https://web.archive.org/web/20191130234759im_/https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" class="microphone-icon" alt="">
+            </div>
         </div>
-        <div class="search-container__input>
-            <label for="search"> </label>
-            <input type="text" name="search">
-        </div>
-        <div class="search-container__microphone">
-            <img src="https://web.archive.org/web/20191130234759im_/https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" class="microphone-img" alt="">
-        </div>
-        <div class="text-container">
-            <button class="btn2">Google Search</button>
-            <button class="btn2">I'm Feeling Lucky</button>
+        
+        
+        <div class="btn-container flex justify-center items-center">
+            <button class="btn-text">Google Search</button>
+            <button class="btn-text">I'm Feeling Lucky</button>
         </div>
     </main>
 
