--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <div class="image-container">
-            <img src="/images/logo.png" class="logo" alt="">
+            <img src="images/logo.png" class="logo" alt="">
         </div>
 
         <div class="search-container flex items-center justify-between shadow-hover">
