--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">  
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">  
 
     <title>Google</title>
 </head>
